# Project-2nd-sem--Meshtalk

./: README.md  backend.cpp  backend.h  compression.cpp  compression.h
Meshtalk/: CMakeLists.txt  Main.qml  backend.cpp  backend.h  compression.cpp  compression.h  crypto.cpp  crypto.h  main.cpp  packet.cpp  packet.h  packetqueue.cpp  packetqueue.h  peermanager.cpp  peermanager.h  peers.cpp  peers.h  transport.cpp  transport.h
